# cpp_smc2_jmalinverno

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
.github/workflows/: build.yml
src/: CMakeLists.txt  cypher.cpp  cypher.h  fileio.cpp  fileio.h
tests/: CMakeLists.txt  Catch.cpp  catch_reporter_github.hpp  studentTests.cpp
